<resources>
    <string name="app_name">Wordle</string>
    <string name="guess1">Guess #1</string>
    <string name="guess1Check">Guess #1 Check</string>
    <string name="guess2">Guess #2</string>
    <string name="guess2Check">Guess #2 Check</string>
    <string name="guess3">Guess #3</string>
    <string name="guess3Check">Guess #3 Check</string>
    <string name="guess">Guess</string>
    <string name="InputHint">Enter 4 Letter Guess Here</string>
</resources>