<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/guess2InputCheck"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2Input" />

    <TextView
        android:id="@+id/guess3Input"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2InputCheck" />

    <TextView
        android:id="@+id/guess1Input"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guess3InputCheck"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3Input" />

    <TextView
        android:id="@+id/guess1InputCheck"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1Input" />

    <TextView
        android:id="@+id/guess2Input"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1InputCheck" />

    <TextView
        android:id="@+id/guess1Check"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess1Check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1" />

    <TextView
        android:id="@+id/guess2"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1Check" />

    <TextView
        android:id="@+id/guess2Check"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess2Check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2" />

    <TextView
        android:id="@+id/guess3"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2Check" />

    <TextView
        android:id="@+id/guess3Check"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess3Check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="52dp"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/guess1"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:text="@string/guess1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="Guess"
        android:inputType="textCapCharacters"
        android:lines="1"
        android:maxLength="4"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guessButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="166dp"
        android:layout_height="144dp"
        android:text="RESET"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>